adding updated due dates, emails and made more consistent

--- a/homework_notebooks/Session5_Homework.ipynb
+++ b/homework_notebooks/Session5_Homework.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": "Session5_Homework"
+  "name": "",
+  "signature": "sha256:c118e739af44bf19ff739054f0fe76e308397c2d94331e160e3d40039e30f479"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -8,11 +9,13 @@
   {
    "cells": [
     {
-     "cell_type": "heading",
-     "level": 1,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Session 5 Homework"
+      "# Session 5 Homework\n",
+      "### Due Wednesday COB March 18\n",
+      "\n",
+      "Submit homework by emailing your completed Notebook to lim@stsci.edu.\n"
      ]
     },
     {
