--- a/homework_notebooks/Session6_Homework.ipynb
+++ b/homework_notebooks/Session6_Homework.ipynb
@@ -1,12 +1,23 @@
 {
  "metadata": {
-  "name": "Session6 Homework"
+  "name": "",
+  "signature": "sha256:47b2dd908a92ab8e35aa40bb49c39bd48637397c9070850ee1b4e7115f7fcb9f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Session 6 Homework\n",
+      "### Due Wednesday COB April 1\n",
+      "\n",
+      "Submit homework by emailing your completed Notebook to perry@stsci.edu.\n"
+     ]
+    },
     {
      "cell_type": "heading",
      "level": 2,
