--- a/homework_notebooks/Session2_Homework.ipynb
+++ b/homework_notebooks/Session2_Homework.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": "Session2_Homework"
+  "name": "",
+  "signature": "sha256:8d1d9b599c55561facb1d353d537a4854e8553c2356d2029bb6408ec589feb7c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -8,11 +9,13 @@
   {
    "cells": [
     {
-     "cell_type": "heading",
-     "level": 1,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Session 2 Homework"
+      "# Session 2 Homework\n",
+      "### Due Wednesday COB February 4\n",
+      "\n",
+      "Submit homework by emailing your completed Notebook to rij@stsci.edu.\n"
      ]
     },
     {
