--- a/homework_notebooks/Session3_Homework.ipynb
+++ b/homework_notebooks/Session3_Homework.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": "Session3_Homework"
+  "name": "",
+  "signature": "sha256:047887ed804cb6a32bbaec396e293e245a71b0584cbd417efae63b818e0da964"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -8,11 +9,13 @@
   {
    "cells": [
     {
-     "cell_type": "heading",
-     "level": 1,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Session 3 Homework"
+      "# Session 3 Homework\n",
+      "### Due Wednesday COB February 18\n",
+      "\n",
+      "Submit homework by emailing your completed Notebook to sosey@stsci.edu.\n"
      ]
     },
     {
