--- a/homework_notebooks/Session4_Homework.ipynb
+++ b/homework_notebooks/Session4_Homework.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": "Session4_Homework"
+  "name": "",
+  "signature": "sha256:3ad06705d59f1a0ca2929c6aa6704e8b14fe49488308ddb1e2cca802d30c7434"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -8,11 +9,13 @@
   {
    "cells": [
     {
-     "cell_type": "heading",
-     "level": 1,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Session 4 Homework"
+      "# Session 4 Homework\n",
+      "### Due Wednesday COB March 4\n",
+      "\n",
+      "Submit homework by emailing your completed Notebook to TBD.\n"
      ]
     },
     {
