--- a/homework_notebooks/Session1_Homework.ipynb
+++ b/homework_notebooks/Session1_Homework.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:03369f072245ccd3fb3c0af68c840ff5d4d0580d3e2688443c07f3ee74f7ac12"
+  "signature": "sha256:6ab6e12d7677854c3a35774c36330e784be270d21bf0270e7c85761a800c86c5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,7 @@
       "\n",
       "Submit homework by emailing your completed Notebook to perry@stsci.edu.\n",
       "\n",
-      "*Remember that you use the key commands `control-m-a` and `control-m-b` to insert new cells above and below the current cell, respectively.*"
+      "*Remember that you use the key commands `escape-a` and `escape-b` to insert new cells above and below the current cell, respectively.*"
      ]
     },
     {
@@ -41,6 +41,18 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import numpy as np # do not time this command\n",
+      "np.array(range(50))\n",
+      "np.arange(50)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -55,7 +67,7 @@
      "source": [
       "## Problem 3\n",
       "\n",
-      "Read in `../data/pix.fits`, scale and offset the data to range from 0 to 1000, and plot the column or row with the maximum value. Annotate your steps using IPython Notebook text cells and include a LaTeX equation that illustrates the transformation you've programmed in."
+      "Read in `../data/pix.fits`, scale and offset the data values to range from 0 to 1000 in the new result, and plot the column or row with the maximum value. Annotate your steps using IPython Notebook text cells and include a LaTeX equation that illustrates the transformation for the pixel values you've programmed in."
      ]
     }
    ],
