updated links for current class

--- a/homework_notebooks/Session3_Homework.ipynb
+++ b/homework_notebooks/Session3_Homework.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:047887ed804cb6a32bbaec396e293e245a71b0584cbd417efae63b818e0da964"
+  "signature": "sha256:15cd4739fe7e9bb2892281423577b7b675441bab9098f5e4f1d0a7037fde83fd"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30,10 +30,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- Download dataset https://github.com/spacetelescope/scientific-python-training-2012/tree/master/data/n8q624e8q_cal.fits\n",
+      "- Download dataset https://github.com/spacetelescope/scientific-python-training-2015/tree/master/data/n8q624e8q_cal.fits\n",
       "\n",
-      "- Download Session 3 Lecture from https://github.com/spacetelescope/scientific-python-training-2012/tree/master/lecture_notebooks/Session3_Phot_Phun_1.ipynb , save it under a different name called \"Session3_Modified_Lecture_USERID.ipynb\".\n",
-      "\n",
+      "- Download Session 3 Lecture from https://github.com/spacetelescope/scientific-python-training-2015/tree/master/lecture_notebooks/Session3_Phot_Phun_1u.ipynb , save it under a different name called \"Session3_Modified_Lecture_USERID.ipynb\".\n",
       "- Run it.\n",
       "\n",
       "- In the section \"Visualizing the Sources\" where stars are chosen based on their sharpness (just after the \"Sharpness vs. Mag\" plot), modify the selection criteria to selct stars with sharpness larger than 0.6 and magnitude brighter than -2. **Hint: Parentheses are important when there are multiple conditions.**\n",
@@ -131,11 +130,19 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Email your solutions (that should these 2 notebooks below) to lim[at]stsci.edu\n",
+      "Email your solutions (that should these 2 notebooks below) to sosey[at]stsci.edu\n",
       "\n",
       "- **Session3_Modified_Lecture_USERID.ipynb**\n",
       "- **Session3_Homework_USERID.ipynb** (a copy of this file with your solutions)"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
