Updated Session 5 materials and related notes. Added files to ignore by git

--- a/homework_notebooks/Session5_Homework.ipynb
+++ b/homework_notebooks/Session5_Homework.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c118e739af44bf19ff739054f0fe76e308397c2d94331e160e3d40039e30f479"
+  "signature": "sha256:39d33ff31a2659ed07e9f467b6bfc104b8ceb17117e34cda3b9b4a03eee4741c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,7 +15,30 @@
       "# Session 5 Homework\n",
       "### Due Tuesday COB March 17\n",
       "\n",
-      "Submit homework by emailing your completed Notebook to lim@stsci.edu.\n"
+      "Submit homework by emailing your completed Notebook to `lim[at]stsci.edu`\n"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Part 0: Getting The Data"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "- Download dataset https://github.com/spacetelescope/scientific-python-training-2015/tree/master/data/o67501020_flt.fits\n",
+      "\n",
+      "- Download Session 5 Lecture from https://github.com/spacetelescope/scientific-python-training-2015/tree/master/lecture_notebooks/Session5_STIS_Spec.ipynb , save it under a different name called \"Session5_Modified_Lecture_USERID.ipynb\"\n",
+      "\n",
+      "- Change `ifile` variable in the lecture to point to where you store your input FITS file\n",
+      "\n",
+      "**OR**\n",
+      "\n",
+      "- Use `git clone` on this entire repository. If you have already done this for a previous lecture in this course, you do not have to do it again."
      ]
     },
     {
@@ -30,11 +53,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- Download dataset https://github.com/spacetelescope/scientific-python-training-2012/tree/master/data/o67501020_flt.fits\n",
-      "\n",
-      "- Download Session 5 Lecture from https://github.com/spacetelescope/scientific-python-training-2012/tree/master/lecture_notebooks/Session5_STIS_Spec.ipynb , save it under a different name called \"Session5_Modified_Lecture_USERID.ipynb\".\n",
-      "\n",
-      "- Run it.\n",
+      "- Run the lecture notebook.\n",
       "\n",
       "- In the section **\"Fit a gaussian to a point > 2*median smoothed background\"**, turn the relevant codes into a function that returns \"pix_bestfit\". Hint: Use \"collapsed_img, loc_start, loc_end\" as input parameters. Then, call your function to get \"pix_bestfit\".\n",
       "\n",
@@ -77,8 +96,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -119,19 +137,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "NameError",
-       "evalue": "name 'something' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-8-1c9553bf39ce>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# Put your solution here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mmy_array\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msomething\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m# If your solution is right, this test will pass,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mNameError\u001b[0m: name 'something' is not defined"
-       ]
-      }
-     ],
-     "prompt_number": 8
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -145,7 +151,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Email your solutions (that should these 2 notebooks below) to dencheva[at]stsci.edu (Nadia Dencheva)\n",
+      "Email your solutions (that should these 2 notebooks below) to lim[at]stsci.edu (Pey Lian Lim)\n",
       "\n",
       "- **Session5_Modified_Lecture_USERID.ipynb**\n",
       "- **Session5_Homework_USERID.ipynb** (a copy of this file with your solutions)"
