Update Session 4 homework

--- a/homework_notebooks/Session4_Homework.ipynb
+++ b/homework_notebooks/Session4_Homework.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c3057a0de8937be2895ca218f7818fda24bc365a469b9b62a8884f44156c1710"
+  "signature": "sha256:73cceddb340886dfe3f3fecf50ac30c7afb37acf4e76993b07610a1634873752"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,7 +15,7 @@
       "# Session 4 Homework\n",
       "### Due Tuesday COB March 3\n",
       "\n",
-      "Submit homework by emailing your completed Notebook to TBD.\n"
+      "Submit homework by emailing your completed Notebook to lbradley@stsci.edu"
      ]
     },
     {
@@ -28,7 +28,7 @@
       "- issue the command \"git init\"\n",
       "- issue the command \"git clone https://github.com/spacetelescope/scientific-python-training-2015.git\"\n",
       "\n",
-      "That will make a directory called \"scientific-pythin-training-2015/\" and download all the files to it.\n",
+      "That will make a directory called \"scientific-python-training-2015/\" and download all the files to it.\n",
       "    - if you want to update the files later, issue the command \"git pull\"\n"
      ]
     },
@@ -52,7 +52,7 @@
       "\n",
       "\n",
       "Run the function to make sure it works and submit a copy of the PDF file produced.\n",
-      "Call it username_part1.pdf"
+      "Call it [username]_part1.pdf"
      ]
     },
     {
@@ -108,30 +108,6 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Advanced (not graded, but I'll help you flush it out if you like)"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "If the above was easy, try making a module which contains a few useful functions for your everyday work.\n",
-      "Some examples might be:\n",
-      "    \n",
-      "* add command line options to the above module so that you can save different format plots or figures on output\n",
-      "* add a function to perform aperture photometry\n",
-      "* add a function which examines the current directory and returns a pretty table which describes its contents, perhaps grouped by Source or Proposal ID\n",
-      "* add functions to the module so that it automatically detects WHICH instrument/telescope the datafile came from and intilizes iraf source detection or photometry task parameters appropriately, you can even return an error statement if that instrument is not supported  by your module.\n",
-      "* add a function which automatically sets up SourceExtractor default files and runs detection on your image producing a catalog\n",
-      "\n",
-      "    \n"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
       "Finally"
      ]
     },
@@ -139,9 +115,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Email your solutions to sosey[at]stsci.edu with the subject: **session4 homework**\n",
+      "Email your solutions to lbradley@stsci.edu with the subject: **Session 4 homework**\n",
       "\n",
-      "Send me this notebook and the files **module.py** and **username_sources.dat**.  \n",
+      "Send me this completed notebook (i.e. Part 1) and the files **module.py** and **[username]_sources.dat**.  \n",
       "\n",
       "Identify that you wrote the module by including an `__author__` assignment."
      ]
