Minor change in Session 4 homework

--- a/homework_notebooks/Session4_Homework.ipynb
+++ b/homework_notebooks/Session4_Homework.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:73cceddb340886dfe3f3fecf50ac30c7afb37acf4e76993b07610a1634873752"
+  "signature": "sha256:dd4deadd374b92eb39ce82131b7fabb08218b6447d7c5719167b3e8865f16dc7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -117,7 +117,7 @@
      "source": [
       "Email your solutions to lbradley@stsci.edu with the subject: **Session 4 homework**\n",
       "\n",
-      "Send me this completed notebook (i.e. Part 1) and the files **module.py** and **[username]_sources.dat**.  \n",
+      "Send me this completed notebook and the files **module.py** and **[username]_sources.dat**.  \n",
       "\n",
       "Identify that you wrote the module by including an `__author__` assignment."
      ]
